plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'org.example'
version = '1.0'

application {
    mainClass.set('tubes.launch.mainApp')
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
}

javafx {
    version = '23.0.2'
    modules = ['javafx.controls', 'javafx.fxml']
}

test {
    useJUnitPlatform()
}

//run {
//    jvmArgs = [
//            "--module-path", classpath.asPath,
//"--add-modules", "javafx.controls,javafx.fxml"
//    ]
//}

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}